# vk-test-cpmc

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: Cli.hpp  CppCompiler.hpp  CppSourceCode.hpp  CppTranslator.hpp  Debug.hpp  Exception.hpp  IO.hpp  ProgramValidator.hpp  Token.hpp  Tokenizer.hpp
include/ast/: Expression.hpp  ExpressionParser.hpp  Instruction.hpp  InstructionComparator.hpp  InstructionDebugPrinter.hpp  InstructionParser.hpp  ParsingContext.hpp  Program.hpp  ProgramParser.hpp
samples/: sample.cpm
src/: Cli.cpp  CppCompiler.cpp  CppSourceCode.cpp  CppTranslator.cpp  Exception.cpp  IO.cpp  Main.cpp  ProgramValidator.cpp  RuntimeSources.cpp  Token.cpp  Tokenizer.cpp
src/ast/: Expression.cpp  ExpressionParser.cpp  Instruction.cpp  InstructionComparator.cpp  InstructionDebugPrinter.cpp  InstructionParser.cpp  ParsingContext.cpp  Program.cpp  ProgramParser.cpp
src/runtime/: Exception.cpp  PrimitiveType.cpp  PrimitiveValue.cpp  Value.cpp
test/: CppCompiler_Test.cpp  Tokenizer_Test.cpp
test/ast/: ExpressionParser_Test.cpp  InstructionParser_Test.cpp  ProgramParser_Test.cpp
test/runtime/: PrimitiveType_Test.cpp  PrimitiveValue_Test.cpp  Value_Test.cpp
